fixed recently broken header z-index on iPhones

--- a/css/iphone_6-x.css
+++ b/css/iphone_6-x.css
@@ -18,7 +18,7 @@ div.logoArea {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  z-index: 1001;
+
 }
 a.homecircle > img {
   float: left;
